--- a/Msprdev/Properties/AndroidManifest.xml
+++ b/Msprdev/Properties/AndroidManifest.xml
@@ -4,7 +4,7 @@
           android:versionName="1.0" 
           package="com.companyname.msprdev">
   <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="30" />
-  <application android:allowBackup="true" android:icon="@drawable/iconeapp" android:label="@string/app_name" android:roundIcon="@drawable/iconeapp" android:supportsRtl="true" android:theme="@style/AppTheme">
+  <application android:allowBackup="true" android:icon="@drawable/iconeappvf" android:label="@string/app_name" android:roundIcon="@drawable/iconeappvf" android:supportsRtl="true" android:theme="@style/AppTheme">
 	  <provider android:name="androidx.core.content.FileProvider"
 					android:authorities="${applicationId}.fileprovider"
 					android:exported="false"
