--- a/Msprdev/Properties/AndroidManifest.xml
+++ b/Msprdev/Properties/AndroidManifest.xml
@@ -1,18 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
-          android:versionCode="1" 
-          android:versionName="1.0" 
-          package="com.companyname.msprdev">
-  <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="30" />
-  <application android:allowBackup="true" android:icon="@drawable/iconeappvf" android:label="@string/app_name" android:roundIcon="@drawable/iconeappvf" android:supportsRtl="true" android:theme="@style/AppTheme">
-	  <provider android:name="androidx.core.content.FileProvider"
-					android:authorities="${applicationId}.fileprovider"
-					android:exported="false"
-					android:grantUriPermissions="true">
-		  <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
-					android:resource="@xml/file_paths"></meta-data>
-	  </provider> 
-  
-  </application>
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.msprdev" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="24" android:targetSdkVersion="30" />
+	<application android:allowBackup="true" android:label="@string/app_name" android:roundIcon="@drawable/iconeappvf" android:supportsRtl="true" android:theme="@style/AppTheme">
+		<provider android:name="androidx.core.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true">
+			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
+		</provider>
+	</application>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
